# huffman

./: CMakeLists.txt  uncrustify.cfg
include/: huffman_coder.hpp  huffman_encoder.hpp  huffman_tree.hpp  huffman_tree_builder.hpp  types_def.hpp
src/: huffman_coder.cpp  huffman_tree.cpp  huffman_tree_builder.cpp
test/: test_hello_world.cpp
